kuber-homeworks/13/files/backend.yaml
apiVersion: apps/v1                                                                                                                       )
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      group: backend
  template:
    metadata:
      labels:
        group: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app                                                                                                                          )
spec:
  selector:
      group: backend
  ports:
  - name: multitool
    protocol: TCP
    port: 80
    targetPort: 80
...
