kuber-homeworks/13/files/deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-connection
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
...
